Added GlobalResponseHandler , ApiResponse , ApiError , Updated GlobalExHandler

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,9 @@
                             <artifactId>lombok</artifactId>
                         </path>
                     </annotationProcessorPaths>
+                    <!--                    <source>24</source>-->
+                    <!--                    <target>24</target>-->
+                    <!--                    <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
                 </configuration>
             </plugin>
             <plugin>
