--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 server.port=8080
 spring.jpa.properties.hibernate.format_sql=true
+#Mela babu chhikhaya??
+spring.jackson.deserialization.fail-on-unknown-properties=true
 #Adding security in the application
 #spring.security.user.name=admin
 #spring.security.user.password=admin123
